syntax = "proto3";

option java_package = "net.alteiar.lendyr.grpc.model.v1.encounter";
option java_multiple_files = true;
option optimize_for = SPEED;

package model.combat;

import "generic.proto";
import "persona.proto";

message LendyrEncounter {
  int32  currentTurn = 1;
  LendyrCurrentInitiative  active = 2;
  repeated LendyrCombatActor initiativeOrder = 3;
}

message LendyrCombatActor {
  bytes personaId = 1;
  int32 initiative = 2;
  int32 team = 3;
}

message LendyrCurrentInitiative {
  int32 activePersonaIdx = 1;
  bool minorActionUsed = 2;
  bool majorActionUsed = 3;
}

// Actions
message LendyrAction {
  oneof actions {
    // Major action
    LendyrAttackAction attack = 1;
    LendyrChargeAttackAction chargeAttack = 2;

    // Minor action
    LendyrMoveAction move = 3;

    // Exploration
    LendyrMoveToAction moveTo = 4;
    LendyrEquip equip = 5;
    LendyrUnequip unequip = 6;
    LendyrPickItem pickItem = 7;
    LendyrDropItem dropItem = 8;
  }
}


// Major Action
message LendyrAttackAction {
  bytes sourceId = 1;
  bytes targetId = 2;
}

message LendyrChargeAttackAction {
  bytes sourceId = 1;
  bytes targetId = 2;
  repeated model.generic.LendyrPosition path = 3;
}

// Minor Action
message LendyrMoveAction {
  bytes sourceId = 1;

  // intermediary path
  repeated model.generic.LendyrPosition position = 2;
}

// Exploration
message LendyrMoveToAction {
  bytes sourceId = 1;
  model.generic.LendyrPosition position = 2;
}

message LendyrEquip {
  bytes personaId = 1;
  bytes equipmentId = 2;
  LendyrEquippedLocation location = 3;
}

message LendyrUnequip {
  bytes personaId = 1;
  LendyrEquippedLocation location = 2;
}

enum LendyrEquippedLocation {
  HAND_1 = 0;
  HAND_2 = 1;
  ARMOR = 2;
  BELT = 3;
  PANTS = 4;
  BOOTS = 5;
  CLOAK = 6;
  NECKLESS = 7;
  GLOVES = 8;
  RING_1 = 9;
  RING_2 = 10;
  AMMO = 11;
}

message LendyrPickItem {
  bytes personaId = 1;
  bytes sourceId = 2;
  repeated bytes itemId = 3;
}

message LendyrDropItem {
  bytes personaId = 1;
  bytes targetId = 2;
  repeated bytes itemId = 3;
}